# torch-rust-practice

./: .gitignore  Cargo.toml  Pipfile  README.md  bundle.js  export_onnx.py  index.html  index.ts  package-lock.json  package.json  run_onnxoptimizer.py  webpack.config.ts
mnist-data/: Cargo.toml
mnist-data/src/: lib.rs
public/: index.html
src/: main.rs
tch-train/: Cargo.toml
tch-train/src/: main.rs
tract-mnist/: Cargo.toml
tract-mnist/src/: main.rs
web-front/: .gitignore  Cargo.toml  index.ts  package-lock.json  package.json  tsconfig.json  webpack.config.ts
web-front/public/: index.html
web-front/src/: lib.rs  mnist.rs
